--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,9 @@ spring.thymeleaf.cache=false
 # \u8BBE\u7F6E\u90AE\u7BB1\u4E3B\u673A
 spring.mail.host=smtp.qq.com
 # \u8BBE\u7F6E\u7528\u6237\u540D
-spring.mail.username=1130045113@qq.com
+spring.mail.username=\u90AE\u7BB1
 # \u8BBE\u7F6E\u5BC6\u7801\uFF0C\u8BE5\u5904\u7684\u5BC6\u7801\u662FQQ\u90AE\u7BB1\u5F00\u542FSMTP\u7684\u6388\u6743\u7801\u800C\u975EQQ\u5BC6\u7801
-spring.mail.password=qzjsslbrttlsicgc
+spring.mail.password=xxx
 #\u90AE\u7BB1\u7AEF\u53E3
 spring.mail.port=465
 spring.mail.default-encoding=utf-8
@@ -31,8 +31,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
 
-spring.redis.host=123.57.227.222
+spring.redis.host=
 spring.redis.port=6379
-spring.redis.password=dongdong@123,
+spring.redis.password=
 spring.redis.jedis.pool.max-active=8
 spring.redis.database=3
